--- a/login.html
+++ b/login.html
@@ -6,124 +6,8 @@
     <title>ONVERSE - Login</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <style>
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            background-color: #f8f9fa;
-        }
-
-        .login-container {
-            background-color: white;
-            border-radius: 15px;
-            box-shadow: 0 0 20px rgba(0, 56, 180, 0.5);
-            width: 350px;
-            padding: 30px;
-            text-align: center;
-        }
-
-        .logo-container {
-            margin-bottom: 20px;
-        }
-
-        .logo-text {
-            font-size: 24px;
-            font-weight: bold;
-            color: #333;
-            margin-bottom: 5px;
-        }
-
-        .logo-tagline {
-            font-size: 12px;
-            color: #666;
-            margin-bottom: 20px;
-        }
-
-        .login-title {
-            font-size: 20px;
-            font-weight: bold;
-            margin-bottom: 30px;
-            color: #333;
-        }
-
-        .input-field {
-            width: 100%;
-            padding: 10px 5px;
-            margin-bottom: 20px;
-            border: none;
-            border-bottom: 1px solid #ccc;
-            font-size: 14px;
-            outline: none;
-            transition: border-color 0.3s;
-        }
-
-        .input-field:focus {
-            border-color: #4285f4;
-        }
-
-        .login-buttons {
-            display: flex;
-            justify-content: center;
-            gap: 20px;
-            margin-top: 30px;
-            margin-bottom: 20px;
-        }
-
-        .kembali-btn {
-            padding: 10px 20px;
-            border: none;
-            border-radius: 20px;
-            background-color: #e0e0e0;
-            color: #666;
-            font-size: 14px;
-            cursor: pointer;
-            transition: background-color 0.3s;
-        }
-
-        .login-submit-btn {
-            padding: 10px 30px;
-            border: none;
-            border-radius: 20px;
-            background-color: #4285f4;
-            color: white;
-            font-size: 14px;
-            cursor: pointer;
-            transition: background-color 0.3s;
-        }
-
-        .kembali-btn:hover {
-            background-color: #d0d0d0;
-        }
-
-        .login-submit-btn:hover {
-            background-color: #3b78e7;
-        }
-
-        .forgot-password {
-            font-size: 12px;
-            color: #666;
-            margin-bottom: 10px;
-        }
-
-        .register-link {
-            font-size: 12px;
-            color: #666;
-        }
-
-        .register-link a {
-            color: #4285f4;
-            text-decoration: none;
-            font-weight: bold;
-        }
-
-        .register-link a:hover {
-            text-decoration: underline;
-        }
-    </style>
 </head>
-<body>
+<body class="auth-page">
     <div class="login-container">
         <div class="logo-container">
             <div class="logo-text">ONVERSE</div>
