--- a/HTML/signup.html
+++ b/HTML/signup.html
@@ -1,122 +1,267 @@
 <!DOCTYPE html>
 <html lang="id">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ONVERSE - Signup</title>
-    <link rel="stylesheet" href="../CSS/style.css">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-</head>
-<body class="auth-page">
+    <link rel="stylesheet" href="../CSS/style.css" />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+  </head>
+  <body class="auth-page">
     <div class="signup-container">
-        <div class="logo-container">
-            <div class="logo-text">ONVERSE</div>
+      <div class="logo-container">
+        <div class="logo-text">
+          <img src="../IMG/judul.png" alt="" />
+        </div>
+      </div>
+
+      <div class="signup-title">Signup</div>
+
+      <div id="errorMessage" class="error-message"></div>
+      <div id="successMessage" class="success-message"></div>
+
+      <form id="signup-form">
+        <input
+          type="text"
+          id="fullname"
+          class="input-field"
+          placeholder="Full Name"
+          required
+        />
+        <input
+          type="text"
+          id="username"
+          class="input-field"
+          placeholder="Username"
+          required
+        />
+        <input
+          type="email"
+          id="email"
+          class="input-field"
+          placeholder="Email"
+          required
+        />
+        <input
+          type="password"
+          id="password"
+          class="input-field"
+          placeholder="Input Password"
+          required
+        />
+        <input
+          type="password"
+          id="confirm-password"
+          class="input-field"
+          placeholder="Confirm Password"
+          required
+        />
+
+        <select id="gender" class="input-field" required>
+          <option value="" disabled selected>Select Gender</option>
+          <option value="Male">Male</option>
+          <option value="Female">Female</option>
+        </select>
+
+        <input
+          type="number"
+          id="age"
+          class="input-field"
+          placeholder="Your Age"
+          min="10"
+          max="99"
+          required
+        />
+
+        <select id="country" class="input-field" required>
+          <option value="" disabled selected>Select Country</option>
+          <option value="ID">Indonesia</option>
+          <option value="MY">Malaysia</option>
+          <option value="SG">Singapore</option>
+          <option value="TH">Thailand</option>
+          <option value="PH">Philippines</option>
+          <option value="VN">Vietnam</option>
+          <option value="AU">Australia</option>
+          <option value="US">United States</option>
+          <option value="GB">United Kingdom</option>
+          <option value="JP">Japan</option>
+          <option value="KR">South Korea</option>
+          <option value="CN">China</option>
+          <option value="IN">India</option>
+          <option value="DE">Germany</option>
+          <option value="FR">France</option>
+          <option value="CA">Canada</option>
+          <option value="BR">Brazil</option>
+          <option value="ZA">South Africa</option>
+        </select>
+
+        <div class="checkbox-container">
+          <input type="checkbox" id="terms" required />
+          <label for="terms" class="terms-text"
+            >Terms and Conditions
+            <a href="privacypolicy.html">ONVERSE</a></label
+          >
         </div>
 
-        <div class="signup-title">Signup</div>
-
-        <form id="signup-form">
-            <input type="text" id="username" class="input-field" placeholder="Username" required>
-            <input type="email" id="email" class="input-field" placeholder="Masukkan Email" required>
-            <input type="password" id="password" class="input-field" placeholder="Masukkan Password" required>
-            <input type="password" id="confirm-password" class="input-field" placeholder="Konfirmasi Password" required>
-
-            <select id="gender" class="input-field" required>
-                <option value="" disabled selected>Pilih Gender</option>
-                <option value="male">Pria</option>
-                <option value="female">Wanita</option>
-                <option value="other">Lainnya</option>
-            </select>
-
-            <input type="number" id="age" class="input-field" placeholder="Usia" min="10" max="99" required>
-
-            <select id="country" class="input-field" required>
-                <option value="" disabled selected>Pilih Negara</option>
-                <option value="ID">Indonesia</option>
-                <option value="MY">Malaysia</option>
-                <option value="SG">Singapura</option>
-                <option value="TH">Thailand</option>
-                <option value="PH">Filipina</option>
-                <option value="VN">Vietnam</option>
-                <option value="AU">Australia</option>
-                <option value="US">Amerika Serikat</option>
-                <option value="GB">Inggris</option>
-                <option value="JP">Jepang</option>
-                <option value="KR">Korea Selatan</option>
-                <option value="CN">Tiongkok</option>
-                <option value="IN">India</option>
-                <option value="DE">Jerman</option>
-                <option value="FR">Prancis</option>
-                <option value="CA">Kanada</option>
-                <option value="BR">Brasil</option>
-                <option value="ZA">Afrika Selatan</option>
-                </select>
-
-
-            <div class="checkbox-container">
-                <input type="checkbox" id="terms" required>
-                <label for="terms" class="terms-text">Syarat dan Ketentuan <a href="privacypolicy.html">ONVERSE</a></label>
-            </div>
-
-            <div class="signup-buttons">
-                <button type="button" class="kembali-btn" onclick="window.location.href='landing.html'">Kembali</button>
-                <button type="submit" class="signup-submit-btn">Signup</button>
-            </div>
-        </form>
+        <div class="signup-buttons">
+          <button
+            type="button"
+            class="kembali-btn"
+            onclick="window.location.href='landing.php'"
+          >
+            Return
+          </button>
+          <button type="submit" class="signup-submit-btn">Signup</button>
+        </div>
+      </form>
+      <div
+        class="login-link"
+        style="margin-top: 20px; font-size: 0.9em; text-align: center"
+      >
+        Already have an account? <a href="login.html">Login here</a>
+      </div>
     </div>
 
     <script>
-        document.getElementById('signup-form').addEventListener('submit', function(event) {
-            event.preventDefault();
+      document
+        .getElementById("signup-form")
+        .addEventListener("submit", async function (event) {
+          event.preventDefault();
 
-            const username = document.getElementById('username').value;
-            const email = document.getElementById('email').value;
-            const password = document.getElementById('password').value;
-            const confirmPassword = document.getElementById('confirm-password').value;
-            const gender = document.getElementById('gender').value;
-            const age = document.getElementById('age').value;
-            // PERUBAHAN DI JAVASCRIPT: Mengambil nilai dari 'country'
-            const country = document.getElementById('country').value;
-            const termsAccepted = document.getElementById('terms').checked;
+          const fullname = document.getElementById("fullname").value.trim();
+          const username = document.getElementById("username").value.trim();
+          const email = document.getElementById("email").value.trim();
+          const password = document.getElementById("password").value;
+          const confirmPassword =
+            document.getElementById("confirm-password").value;
+          const gender = document.getElementById("gender").value;
+          const age = document.getElementById("age").value;
+          const country = document.getElementById("country").value;
+          const termsAccepted = document.getElementById("terms").checked;
 
-            if (password !== confirmPassword) {
-                alert('Password tidak cocok!');
-                return;
+          const errorMessageDiv = document.getElementById("errorMessage");
+          const successMessageDiv = document.getElementById("successMessage");
+
+          errorMessageDiv.textContent = "";
+          errorMessageDiv.style.display = "none";
+          successMessageDiv.textContent = "";
+          successMessageDiv.style.display = "none";
+
+          if (!fullname) {
+            errorMessageDiv.textContent = "Please enter your Full Name!";
+            errorMessageDiv.style.display = "block";
+            return;
+          }
+          if (!username) {
+            errorMessageDiv.textContent = "Please enter a Username!";
+            errorMessageDiv.style.display = "block";
+            return;
+          }
+
+          if (password !== confirmPassword) {
+            errorMessageDiv.textContent =
+              "Incorrect Password! Please re-enter your password.";
+            errorMessageDiv.style.display = "block";
+            return;
+          }
+
+          if (!termsAccepted) {
+            errorMessageDiv.textContent =
+              "You must accept the Terms and Conditions!";
+            errorMessageDiv.style.display = "block";
+            return;
+          }
+
+          if (gender === "") {
+            errorMessageDiv.textContent = "Please select your Gender!";
+            errorMessageDiv.style.display = "block";
+            return;
+          }
+          if (age === "" || parseInt(age) < 10 || parseInt(age) > 99) {
+            errorMessageDiv.textContent =
+              "Please enter a valid Age (between 10-99)!";
+            errorMessageDiv.style.display = "block";
+            return;
+          }
+          if (country === "") {
+            errorMessageDiv.textContent = "Please select your Country!";
+            errorMessageDiv.style.display = "block";
+            return;
+          }
+          if (password.length < 6) {
+            errorMessageDiv.textContent =
+              "Password must be at least 6 characters long!";
+            errorMessageDiv.style.display = "block";
+            return;
+          }
+          if (!/^[^\s@]+@[^\s@]+\.[^\s@]+$/.test(email)) {
+            errorMessageDiv.textContent = "Invalid email format!";
+            errorMessageDiv.style.display = "block";
+            return;
+          }
+
+          const userData = {
+            fullname: fullname, // BARU: Kirim fullname
+            username: username, // PERBAIKAN: Kirim username (sesuai nama kolom di DB)
+            email: email,
+            password: password,
+            gender: gender,
+            age: age ? parseInt(age) : null, // Convert to number or null if empty
+            country: country,
+          };
+
+          try {
+            const response = await fetch("../php/signup.php", {
+              method: "POST",
+              headers: {
+                "Content-Type": "application/json",
+              },
+              body: JSON.stringify(userData),
+            });
+
+            const data = await response.json();
+
+            if (data.success) {
+              successMessageDiv.textContent = data.message;
+              successMessageDiv.style.display = "block"; // Update local storage/session storage for app.js to pick up login state
+
+              sessionStorage.setItem("isLoggedIn", "true");
+              sessionStorage.setItem("user_id", data.user.id);
+              sessionStorage.setItem("userName", data.user.username);
+              sessionStorage.setItem("userFullname", data.user.fullname);
+              sessionStorage.setItem("user_email", data.user.email);
+
+              const roleFromDb =
+                data.user.role || (data.user.is_creator ? "author" : "reader"); // Ambil role dari DB, atau tentukan
+              sessionStorage.setItem("userRole", roleFromDb);
+              sessionStorage.setItem(
+                "userVerified",
+                data.user.verified ? "true" : "false"
+              ); // Simpan status verified (biasanya false saat signup)
+
+              setTimeout(() => {
+                // Redirect ke landing.html setelah signup (sesuai perilaku default Anda)
+                window.location.href = "landing.php";
+                if (data.user.is_creator && !data.user.verified) {
+                  alert(
+                    "Your creator account is pending verification. You can browse, but cannot publish or access creator features yet."
+                  );
+                }
+              }, 1500); // Redirect after 1.5 seconds
+            } else {
+              errorMessageDiv.textContent = data.message;
+              errorMessageDiv.style.display = "block";
             }
-
-            if (!termsAccepted) {
-                alert('Anda harus menyetujui Syarat dan Ketentuan!');
-                return;
-            }
-
-            if (gender === "") {
-                alert('Silakan pilih Gender Anda!');
-                return;
-            }
-            if (age === "" || parseInt(age) < 10 || parseInt(age) > 99) {
-                alert('Silakan masukkan Usia yang valid (antara 10-99)!');
-                return;
-            }
-            // PERUBAHAN DI JAVASCRIPT: Validasi untuk 'country'
-            if (country === "") {
-                alert('Silakan pilih Negara Anda!');
-                return;
-            }
-
-            const userData = {
-                username: username,
-                email: email,
-                password: password,
-                gender: gender,
-                age: age,
-                country: country // PERUBAHAN DI JAVASCRIPT: Menggunakan 'country'
-            };
-
-            console.log('Data pendaftaran:', userData);
-
-            alert('Akun berhasil dibuat!');
-            window.location.href = 'login.html';
+          } catch (error) {
+            console.error("Error saat pendaftaran:", error);
+            errorMessageDiv.textContent =
+              "An error occurred during signup. Please try again later.";
+            errorMessageDiv.style.display = "block";
+          }
         });
     </script>
-</body>
+  </body>
 </html>
